<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_tv_static"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/main_tv_static" />

    <Button
        android:id="@+id/main_btn_adauga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_adauga" />

    <Button
        android:id="@+id/main_btn_istoric"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_istoric" />

    <Button
        android:id="@+id/main_btn_import"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_import" />

    <Button
        android:id="@+id/main_btn_despre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_despre" />

</LinearLayout>