<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AdaugaActivity">

    <!-- Destinatar -->
    <EditText
        android:id="@+id/adauga_et_destinatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/adauga_et_destinatar_hint"
        android:inputType="text" />

    <!-- Adresa -->
    <EditText
        android:id="@+id/adauga_et_adresa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/adauga_et_adresa_hint"
        android:inputType="text" />

    <!-- Data -->
    <EditText
        android:id="@+id/adauga_et_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/adauga_et_data_hint"
        android:inputType="text" />

    <!-- Valoare -->
    <EditText
        android:id="@+id/adauga_et_valoare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/adauga_et_valoare_hint"
        android:inputType="text" />

    <!-- Tip -->
    <Spinner
        android:id="@+id/adauga_spn_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/adauga_tv_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center_horizontal"
        android:text="@string/adauga_tv_error"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone" />


    <!-- Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/adauga_btn_salvare"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/adauga_btn_salvare" />

        <Button
            android:id="@+id/adauga_btn_stergere"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/adauga_btn_stergere"
            android:visibility="gone" />

    </LinearLayout>


</LinearLayout>